# universe-remote-desktop

./: .gitignore  README.md  index.html
UniverseRemoteApplication/: Cargo.toml
UniverseRemoteApplication/src/: index.html  main.rs
UniverseRemoteApplication/wix/: License.rtf  main.wxs
my_client/: Cargo.toml
my_client/src/: main.rs
my_client/wix/: main.wxs
my_server/: Cargo.toml
my_server/src/: main.rs
my_server/wix/: main.wxs
