[package]
name = "my_server"
version = "0.1.0"
edition = "2024"
authors = ["Armend Saliu"]
license = "MIT"
description = "High Performance Remote Desktop Server"
homepage = "https://github.com/armendsaliu/universe-remote-desktop"

[dependencies]
tokio = { version = "1", features = ["full"] }
tokio-tungstenite = "0.20"
futures-util = "0.3"
